# v

./: LICENSE  README.md  TODO.md
analyze-chromatic-usage/: .gitignore  README.md  chromatic-usage-report.dummy.csv  eda.ipynb  pyproject.toml
analyze-github-usage/: .gitignore  README.md  eda.ipynb  pyproject.toml  summarizedUsageReport.dummy.csv
analyze-storybook-graph/: .gitignore  README.md  TODO.md  analyze_storybook_graph.py
chromatic-tree-analyzer/: analyze_dependencies.py
lassie/: README.md  TODO.md
lassie/.devcontainer/: Dockerfile  devcontainer.json
lassie/eda/: eda.ipynb  requirements.txt
voom/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  debug-test.js  index.html  movement-test-summary.md  package.json  test-input.html  test-movement.html  tsconfig.json  vite.config.ts  vitest.config.ts  viv-notes.md
voom/.claude/agents/: Dev.md  ProjectManager.md
voom/assets/: CREDITS.md  README.md
voom/src/: main.ts
voom/src/config/: movement.config.ts
voom/src/debug/: DebugTester.ts
voom/src/input/: InputManager.ts  PointerLockManager.ts
voom/src/player/: MovementSystem.ts  PlayerController.ts
voom/src/renderer/: CameraController.ts  LightingSetup.ts  SceneManager.ts
voom/src/test/: setup.ts
voom/src/types/: renderer.types.ts
voom/src/ui/: ControlsOverlay.ts
voom/src/utils/: DevTools.ts
voom/vibe/: technical.md
voom/vibe/agents/: dev.md  pm.md
voom/vibe/docs/: brief.md  prd.md
voom/vibe/prompts/: asset-research-prompt.md  technical-architecture-prompt.md
voom/vibe/tmpl/: brief.md  prd.md  story.md
(+7 files in other folders)
