[project]
name = "analyze-chromatic-usage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
]
