[project]
name = "analyze-github-billing"
version = "0.1.0"
description = "notebook for analyzing github billing data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
]
